force-app/main/default/objects/Case/fields/E911_Service_Address_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>E911_Service_Address_City_State_Zip__c</fullName>
    <inlineHelpText>Please provide theStreet Number, Street Direction, Street Name, Street Type, Street Post Direction, Bldg/Ste, City, State, and Zip/Postal Code.</inlineHelpText>
    <label>E911 Service Address, City, State, Zip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>