force-app/main/default/objects/Case/fields/EM_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>EM_Assignment_Date__c</fullName>
    <label>EM Assignment Date</label>
    <type>Date</type>
</CustomField>