force-app/main/default/objects/Case/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <inlineHelpText>Ex: list@pgi.com</inlineHelpText>
    <label>Email address</label>
    <type>Email</type>
</CustomField>