force-app/main/default/objects/Case/fields/Email_SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>Email_SLA_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email SLA Breached</label>
    <type>Checkbox</type>
</CustomField>