force-app/main/default/objects/Case/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Plain Text</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>