force-app/main/default/objects/Case/fields/Enterprise_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Name__c</fullName>
    <label>Requesting Enterprise Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>