force-app/main/default/objects/Case/fields/EnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseName__c</fullName>
    <formula>PGi_Company__r.Enterprise_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise Name</label>
    <type>Text</type>
</CustomField>