force-app/main/default/objects/Case/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Escalates Case (sends email to owner and assigned to user)</description>
    <label>User Escalated</label>
    <type>Checkbox</type>
</CustomField>