force-app/main/default/objects/Case/fields/Example_URL__c.field-meta.xml
<CustomField>
    <fullName>Example_URL__c</fullName>
    <inlineHelpText>example: https://login.salesforce.com/001a000001Abc3G</inlineHelpText>
    <label>Example URL</label>
    <type>Url</type>
</CustomField>