force-app/main/default/objects/Case/fields/Exchange_Version__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Version__c</fullName>
    <label>Exchange Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>