force-app/main/default/objects/Case/fields/Exclude_From_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reporting__c</fullName>
    <label>Exclude From Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>