force-app/main/default/objects/Case/fields/Expedited__c.field-meta.xml
<CustomField>
    <fullName>Expedited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if the issue is a high priority for triage.</inlineHelpText>
    <label>Expedited</label>
    <type>Checkbox</type>
</CustomField>