force-app/main/default/objects/Case/fields/External_emails_from_clients__c.field-meta.xml
<CustomField>
    <fullName>External_emails_from_clients__c</fullName>
    <label>External emails from clients?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>