force-app/main/default/objects/Case/fields/External_Support_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Support_Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Support Case Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>PGi-Client External Support</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>External Support Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>