force-app/main/default/objects/Case/fields/Failure_Point_and_Mode__c.field-meta.xml
<CustomField>
    <fullName>Failure_Point_and_Mode__c</fullName>
    <label>Failure Point and Mode</label>
    <type>TextArea</type>
</CustomField>