force-app/main/default/objects/Case/fields/Fields_Needed__c.field-meta.xml
<CustomField>
    <fullName>Fields_Needed__c</fullName>
    <label>Fields Needed</label>
    <type>TextArea</type>
</CustomField>