force-app/main/default/objects/Case/fields/Financial_Request__c.field-meta.xml
<CustomField>
    <fullName>Financial_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Request</label>
    <referenceTo>Financial_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>