force-app/main/default/objects/Case/fields/First_Assigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Assigned_Date_Time__c</fullName>
    <label>First Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>