force-app/main/default/objects/Case/fields/First_Reply_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_Time__c</fullName>
    <label>First Reply Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>