force-app/main/default/objects/Case/fields/First_Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>First_Response_SLA__c</fullName>
    <description>Capture the &quot;SLA Time Remaining&quot; value when the &quot;First Response Time&quot; is populated (in minutes)</description>
    <inlineHelpText>Capture the &quot;SLA Time Remaining&quot; value when the &quot;First Response Time&quot; is populated (in minutes)</inlineHelpText>
    <label>First Response SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>