force-app/main/default/objects/Case/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <description>The time the first email is sent to the customer from an agent</description>
    <inlineHelpText>The time the first email is sent to the customer from an agent</inlineHelpText>
    <label>First Response Time</label>
    <type>DateTime</type>
</CustomField>