force-app/main/default/objects/Case/fields/Flag_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Flag_File_Name__c</fullName>
    <label>Flag File Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>