force-app/main/default/objects/Case/fields/Follow_Up_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Email_Address__c</fullName>
    <inlineHelpText>Separate additional email addresses with a comma.</inlineHelpText>
    <label>Follow-Up Email Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>