force-app/main/default/objects/Case/fields/Follow_Up_Number__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Number__c</fullName>
    <label>Follow-Up Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>