force-app/main/default/objects/Case/fields/For_Sales_Mgmt_OR_Reporting__c.field-meta.xml
<CustomField>
    <fullName>For_Sales_Mgmt_OR_Reporting__c</fullName>
    <inlineHelpText>Check this box if this is for Sales Management or Reporting Purposes</inlineHelpText>
    <label>For Sales Mgmt or Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>