force-app/main/default/objects/Case/fields/GeneralDetails__c.field-meta.xml
<CustomField>
    <fullName>GeneralDetails__c</fullName>
    <label>General Details</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>