force-app/main/default/objects/Case/fields/Has_customer_completed_GMSO_consent__c.field-meta.xml
<CustomField>
    <fullName>Has_customer_completed_GMSO_consent__c</fullName>
    <inlineHelpText>Required for the GMSO service to work.</inlineHelpText>
    <label>Has customer completed GMSO consent?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>