force-app/main/default/objects/Case/fields/HasParentCase__c.field-meta.xml
<CustomField>
    <fullName>HasParentCase__c</fullName>
    <formula>IF(
OR(
Parent.RecordType.DeveloperName = &quot;Inbound_Email_Support&quot;,
Parent.RecordType.DeveloperName = &quot;Outbound_Email_Support&quot;), TRUE, FALSE)</formula>
    <label>Has Parent Case?</label>
    <type>Checkbox</type>
</CustomField>