force-app/main/default/objects/Case/fields/HasResponsibleParty__c.field-meta.xml
<CustomField>
    <fullName>HasResponsibleParty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto checks via PB if a Responsible Party is added to the case</description>
    <label>Has Responsible Party</label>
    <type>Checkbox</type>
</CustomField>