force-app/main/default/objects/Case/fields/Hours_Needed_AR__c.field-meta.xml
<CustomField>
    <fullName>Hours_Needed_AR__c</fullName>
    <label>Hours Needed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>