force-app/main/default/objects/Case/fields/Hours_to_Resolve_SLA__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Resolve_SLA__c</fullName>
    <label>Hours to Resolve SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>