force-app/main/default/objects/Case/fields/Hours_to_Restore_SLA__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Restore_SLA__c</fullName>
    <label>Hours to Restore SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>