force-app/main/default/objects/Case/fields/How_was_Outage_Detected__c.field-meta.xml
<CustomField>
    <fullName>How_was_Outage_Detected__c</fullName>
    <label>How was Outage Detected?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Notification</fullName>
            </value>
            <value>
                <fullName>Internal Notification</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Vendor Notification</fullName>
            </value>
            <value>
                <fullName>Trending</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>