force-app/main/default/objects/Case/fields/How_will_share_be_used__c.field-meta.xml
<CustomField>
    <fullName>How_will_share_be_used__c</fullName>
    <inlineHelpText>Example: This share will be used for the Tech department to store files. Or, this share will be used to store audio recordings.</inlineHelpText>
    <label>How will share be used?</label>
    <type>TextArea</type>
</CustomField>