force-app/main/default/objects/Case/fields/HR_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>HR_Request_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Request Form</label>
    <referenceTo>Human_Resource_Form__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>