force-app/main/default/objects/Case/fields/HUB_URL__c.field-meta.xml
<CustomField>
    <fullName>HUB_URL__c</fullName>
    <label>Hub/Meeting URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>