force-app/main/default/objects/Case/fields/If_Recovered_which_Winback_Strategy__c.field-meta.xml
<CustomField>
    <fullName>If_Recovered_which_Winback_Strategy__c</fullName>
    <label>If Recovered, which Winback Strategy?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Winback_Attempt_Outcome__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Discount</fullName>
            </value>
            <value>
                <fullName>One Month Extension</fullName>
            </value>
            <value>
                <fullName>Product Upgrade</fullName>
            </value>
            <value>
                <fullName>Share Upcoming Features</fullName>
            </value>
            <value>
                <fullName>Personalized Training</fullName>
            </value>
            <value>
                <fullName>Account Pause</fullName>
            </value>
            <value>
                <fullName>Convert to Annual Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>