force-app/main/default/objects/Case/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <label>Impact Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>