force-app/main/default/objects/Case/fields/Implementation_Task__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Task</label>
    <type>Checkbox</type>
</CustomField>