force-app/main/default/objects/Case/fields/Include_Mgr_in_Review__c.field-meta.xml
<CustomField>
    <fullName>Include_Mgr_in_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected the Mngt team will receive a copy of the closed case email notification.</inlineHelpText>
    <label>Include Mgr in Review</label>
    <type>Checkbox</type>
</CustomField>