force-app/main/default/objects/Case/fields/Internal_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Case_Comments__c</fullName>
    <description>Use this for comments not be shared outside of the company.</description>
    <inlineHelpText>Use this for comments not be shared outside of the company.</inlineHelpText>
    <label>Internal Case Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>