force-app/main/default/objects/Case/fields/Internet_Explorer_Version__c.field-meta.xml
<CustomField>
    <fullName>Internet_Explorer_Version__c</fullName>
    <label>Internet Explorer Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>