force-app/main/default/objects/Case/fields/Is_this_PRB_related__c.field-meta.xml
<CustomField>
    <fullName>Is_this_PRB_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this PRB related?</label>
    <type>Checkbox</type>
</CustomField>