force-app/main/default/objects/Case/fields/IsCurrentUser_Request__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser_Request__c</fullName>
    <formula>If ( $User.Id =    CreatedBy.Id  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser_Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>