force-app/main/default/objects/Case/fields/Issue_Replicated_in_OWA__c.field-meta.xml
<CustomField>
    <fullName>Issue_Replicated_in_OWA__c</fullName>
    <label>Issue Replicated in OWA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>