force-app/main/default/objects/Case/fields/IsUpdateFromCaseComment__c.field-meta.xml
<CustomField>
    <fullName>IsUpdateFromCaseComment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by apex to allow the page to refresh after saving the case from adding related items (such as case comments) since we currently have a Case VF Override for New, Edits, and View.</description>
    <label>IsUpdateFromCaseComment</label>
    <type>Checkbox</type>
</CustomField>