force-app/main/default/objects/Case/fields/JIRA_Story_Number__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Story_Number__c</fullName>
    <label>JIRA Story Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>