force-app/main/default/objects/Case/fields/Kanban_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Kanban_Sort_Order__c</fullName>
    <label>Kanban Sort Order</label>
    <precision>18</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>