force-app/main/default/objects/Case/fields/KanbanOrder__c.field-meta.xml
<CustomField>
    <fullName>KanbanOrder__c</fullName>
    <label>KanbanOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>