force-app/main/default/objects/Case/fields/Knowledge_Internal__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Internal__c</fullName>
    <label>Knowledge/Workaround (Internal)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>