force-app/main/default/objects/Case/fields/Legacy_Return_to_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Return_to_Group_Member__c</fullName>
    <description>do not use -</description>
    <label>Legacy_Return to Group Member</label>
    <length>30</length>
    <type>Text</type>
</CustomField>