force-app/main/default/objects/Case/fields/List_Attached__c.field-meta.xml
<CustomField>
    <fullName>List_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If more than 50 phone numbers, please use the attachments area to add list.</description>
    <label>List Attached</label>
    <type>Checkbox</type>
</CustomField>