force-app/main/default/objects/Case/fields/List_of_Broker_Accounts__c.field-meta.xml
<CustomField>
    <fullName>List_of_Broker_Accounts__c</fullName>
    <inlineHelpText>Do not include passwords here</inlineHelpText>
    <label>List of Broker Accounts</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>