force-app/main/default/objects/Case/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>