force-app/main/default/objects/Case/fields/Log_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Log_Analysis__c</fullName>
    <description>UCaaS</description>
    <label>Log Analysis</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>