force-app/main/default/objects/Case/fields/Losing_LEC__c.field-meta.xml
<CustomField>
    <fullName>Losing_LEC__c</fullName>
    <label>Losing LEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>