force-app/main/default/objects/Case/fields/Meeting_Connection_Method__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Connection_Method__c</fullName>
    <label>Meeting Connection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dial In</fullName>
                <label>PSTN Dial In</label>
            </value>
            <value>
                <fullName>PSTN Dial Out</fullName>
            </value>
            <value>
                <fullName>VoIP</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>