force-app/main/default/objects/Case/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <label>Meeting URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>