force-app/main/default/objects/Case/fields/Mobile_App_Installed__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Installed__c</fullName>
    <label>Mobile App Installed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>