force-app/main/default/objects/Case/fields/Mobile_Customer_s_Operation_System_Lang__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Customer_s_Operation_System_Lang__c</fullName>
    <label>Mobile Customer&apos;s Operation System Lang</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French (France)</fullName>
            </value>
            <value>
                <fullName>French (Canada)</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>