force-app/main/default/objects/Case/fields/Mobile_OS__c.field-meta.xml
<CustomField>
    <fullName>Mobile_OS__c</fullName>
    <description>UCaaS</description>
    <label>Computer/Mobile OS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>