force-app/main/default/objects/Case/fields/Mobile_URL__c.field-meta.xml
<CustomField>
    <fullName>Mobile_URL__c</fullName>
    <label>Associated Meeting URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>