force-app/main/default/objects/Case/fields/Moderator_Joined_Status__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Joined_Status__c</fullName>
    <label>Moderator Joined Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moderator Did Join Conf (via Conf Report)</fullName>
            </value>
            <value>
                <fullName>Moderator Did Not Join Conf</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>