force-app/main/default/objects/Case/fields/Moderator_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Passcode__c</fullName>
    <label>Moderator Passcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>