force-app/main/default/objects/Case/fields/Most_Recent_Paused_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Paused_Time__c</fullName>
    <label>Most Recent Paused Time</label>
    <type>DateTime</type>
</CustomField>