force-app/main/default/objects/Case/fields/Most_Recent_SLA_Start__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SLA_Start__c</fullName>
    <label>Most Recent SLA Start</label>
    <type>DateTime</type>
</CustomField>