force-app/main/default/objects/Case/fields/Multiple_Tickets_for_Call__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Tickets_for_Call__c</fullName>
    <label>Multiple Tickets for Call?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>