force-app/main/default/objects/Case/fields/NET_Version__c.field-meta.xml
<CustomField>
    <fullName>NET_Version__c</fullName>
    <label>.NET Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>