force-app/main/default/objects/Case/fields/New_BTN_ATN__c.field-meta.xml
<CustomField>
    <fullName>New_BTN_ATN__c</fullName>
    <label>New BTN/ATN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>