force-app/main/default/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>What are the next steps needed to move forward with this request?</inlineHelpText>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>