force-app/main/default/objects/Case/fields/Num_Mod__c.field-meta.xml
<CustomField>
    <fullName>Num_Mod__c</fullName>
    <label>Num Mod</label>
    <length>40</length>
    <type>Text</type>
</CustomField>