force-app/main/default/objects/Case/fields/Number_Dialed__c.field-meta.xml
<CustomField>
    <fullName>Number_Dialed__c</fullName>
    <description>UCaaS</description>
    <label>Number/Extension Dialed To</label>
    <type>Phone</type>
</CustomField>