force-app/main/default/objects/Case/fields/Opened_With_GX__c.field-meta.xml
<CustomField>
    <fullName>Opened_With_GX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When we open a ticket for our customers which involves GX opening a case this should be checked (set to true).</description>
    <inlineHelpText>If this case is tied to a Global Crossing Ticket Request, check this field.</inlineHelpText>
    <label>Opened With L3</label>
    <type>Checkbox</type>
</CustomField>