force-app/main/default/objects/Case/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>