force-app/main/default/objects/Case/fields/Operator_hosted_call__c.field-meta.xml
<CustomField>
    <fullName>Operator_hosted_call__c</fullName>
    <label>Operator hosted call?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>