force-app/main/default/objects/Case/fields/Oppty_Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Total_MRR__c</fullName>
    <formula>Opportunity_Name__r.Total_MRR_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Total MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>