force-app/main/default/objects/Case/fields/Order_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact_Email__c</fullName>
    <label>Order Contact Email</label>
    <type>Email</type>
</CustomField>