force-app/main/default/objects/Case/fields/Other_Client_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Other_Client_Carrier__c</fullName>
    <label>Other Client Carrier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>