force-app/main/default/objects/Case/fields/Parameters_Entered_Needed__c.field-meta.xml
<CustomField>
    <fullName>Parameters_Entered_Needed__c</fullName>
    <label>Parameters Entered/Needed</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>