force-app/main/default/objects/Case/fields/Parent_Ticket_NOC__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_NOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Customer&#39;s Case # for Review has a NOC Ticket then this field will auto populate, if it does not or if you manually populate this field then it will be subjective to you to enter the details.</inlineHelpText>
    <label>Parent Ticket (NOC)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Parent Ticket (NOC))</relationshipLabel>
    <relationshipName>CaseIncidentReviewNOC</relationshipName>
    <type>Lookup</type>
</CustomField>