force-app/main/default/objects/Case/fields/Personal_Information_Data_Request__c.field-meta.xml
<CustomField>
    <fullName>Personal_Information_Data_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Information Data Request</label>
    <referenceTo>PIDR__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>