force-app/main/default/objects/Case/fields/PGi_Client__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You must enter the ID of the Client record, Names will not return any result.</inlineHelpText>
    <label>PGi Client</label>
    <referenceTo>PGi_Client__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>