force-app/main/default/objects/Case/fields/PGi_Client_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client_Red_Flag__c</fullName>
    <formula>PGi_Client__r.Red_Flag_Date__c</formula>
    <label>PGi Client Red Flag</label>
    <type>Date</type>
</CustomField>