force-app/main/default/objects/Case/fields/PGi_Client_via_external_form__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client_via_external_form__c</fullName>
    <label>PGi Client (via external form)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>