force-app/main/default/objects/Case/fields/PGi_Company__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Company ID.</inlineHelpText>
    <label>PGi Company</label>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>