force-app/main/default/objects/Case/fields/PGi_Company_a_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_a_Placeholder__c</fullName>
    <formula>PGi_Company__r.Placeholder__c || Bill_To_Client__r.PGi_Company__r.Placeholder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGi Company a Placeholder</label>
    <type>Checkbox</type>
</CustomField>