force-app/main/default/objects/Case/fields/PGi_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_Name__c</fullName>
    <formula>PGi_Company__r.Company_Name__c</formula>
    <label>PGi Company Name</label>
    <type>Text</type>
</CustomField>