force-app/main/default/objects/Case/fields/PGi_Company_s_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_s_Business_Unit__c</fullName>
    <formula>PGi_Company__r.Business_Unit__c</formula>
    <inlineHelpText>previously or also known as &quot;international country code&quot;</inlineHelpText>
    <label>PGi Company&#39;s Business Unit</label>
    <type>Text</type>
</CustomField>